# iggy

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: options.cmake  packages.cmake
demo/: main.cc
iggy/: CMakeLists.txt
iggy/base/: CMakeLists.txt  bounded_concurrent_queue.h  concurrent_queue.h  object_pool.h  signal_slot.h  thread_pool.h  worker_thread.cc  worker_thread.h
iggy/common/: CMakeLists.txt
iggy/common/factory/: CMakeLists.txt  autoreg_factory.cc  autoreg_factory.h
iggy/common/time/: CMakeLists.txt  perf_timer.cc  perf_timer.h
iggy/common/util/: CMakeLists.txt  any.h  file_util.cc  file_util.h  lru_cache.h  lru_cache.hpp  macros.h  string_util.cc  string_util.h
iggy/image_proc/: CMakeLists.txt
iggy/image_proc/base/: CMakeLists.txt  image.cc  image.h  rect.h
iggy/image_proc/image_transform/: CMakeLists.txt  image_transform.cc  image_transform.h
iggy/image_proc/io/: CMakeLists.txt  image.cc  image.h
iggy/math/estimation/: extended_kalman_filter.h  kalman_filter.h
iggy/math/util/: CMakeLists.txt  angle.cc  angle.h  math_util.cc  math_util.h  matrix_util.h  mean_filter.cc  mean_filter.h  sin_table.cc  sin_table.h
scripts/: cpplint.py
test/: CMakeLists.txt  iggy_base_bounded_concurrent_queue_test.cc  iggy_base_concurrent_queue_test.cc  iggy_base_object_pool_test.cc  iggy_base_signal_slot_test.cc  iggy_base_thread_pool_test.cc  iggy_base_worker_thread_test.cc  iggy_common_factory_test.cc  iggy_common_time_test.cc  iggy_common_util_file_util_test.cc  iggy_common_util_lru_cache_test.cc  iggy_common_util_macros_test.cc  iggy_common_util_string_util_test.cc  iggy_image_proc_base_image_test.cc  iggy_image_proc_io_image_test.cc  iggy_math_estimation_extended_kalman_filter_test.cc  iggy_math_estimation_kalman_filter_test.cc  iggy_math_util_angle_test.cc  iggy_math_util_math_util_test.cc  iggy_math_util_mean_filter_test.cc
